# E1001-reTerminal-Photo-Album

./: .gitignore  CMakeLists.txt  README.md  copilot-instructions.md  generate_font.py  partitions.csv  resize_images.py  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  board_config.h  carousel.c  carousel.h  display_overlay.c  display_overlay.h  dns_server.c  dns_server.h  epaper_driver.c  epaper_driver.h  font_16x24.h  image_processor.c  image_processor.h  main.c  power_manager.c  power_manager.h  sht40.c  sht40.h  storage_manager.c  storage_manager.h  test_jpeg.c  tjpgdcnf.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
spiffs/: README.md
